force-app/main/default/objects/FPSA_Invoice_Line__c/FPSA_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>IL-{000}</displayFormat>
        <label>Invoice Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>