force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Activity__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Activity__c</fullName>
    <label>Activity Name</label>
    <type>TextArea</type>
</CustomField>