force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Amount__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>