force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Description__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Description__c</fullName>
    <label>Description</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>