force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Hours__c</fullName>
    <label>Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>