force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Invoice__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>FPSA_Invoice_Header__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>