force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Project__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>