force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Project_Resource_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Resource_Billing_Rate__c</fullName>
    <label>Project Resource Billing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>