force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Resource__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>