force-app/main/default/objects/FPSA_Invoice_Line__c/fields/FPSA_Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Week_Ending_Date__c</fullName>
    <label>Week Ending Date</label>
    <type>Date</type>
</CustomField>