force-app/main/default/objects/FPSA_Invoice_Line__c/fields/Invoice_Line_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Line External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>